--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.datasource.hikari.maximumPoolSize=5
 gelicon.orm.showSQL=true
 logging.level.org.springframework.jdbc.core=TRACE
 
-gelicon.orm.recreatedatabase=true
+gelicon.orm.recreatedatabase=false
 
 # PostgreSQL
 #spring.datasource.url=jdbc:postgresql://10.15.3.39:5432/PS_DEVELOP_TRUNK
